# OblivionEngine

./: .gitignore  CMakeLists.txt  README.md
base/: default.cfg
base/shaderbin/: colorPass.frag.spv  colorPass.vert.spv  example.frag.spv  example.vert.spv
base/shaderprogs/: colorPass.frag  colorPass.vert  example.frag  example.vert  example.vert.layout
exgamelib/: Game.cpp
game/: engine
private/app/: App.cpp
private/appsystem/: AppSystem.cpp  AppSystemGroup.cpp  interface.cpp
private/engine/: EngineMain.cpp
private/engine/main/: EngineApp.cpp  main.cpp
private/launcher/: launcher.cpp
private/layer0/: Lexer.cpp  String.cpp
private/layer1/: Command.cpp  Cvar.cpp  EventPump.cpp  EventSystem.cpp
private/layer2/: File.h  FileSystem.cpp  Window.cpp
private/layer3/renderer/: Backend.h  BackendFormat.h  Renderer.cpp
private/layer3/renderer/vkbackend/: Backend.cpp  Vulkan.h
private/layer3/renderer/vkbackend/vulkan/: VkColors.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkDevice.cpp  VkDevice.h  VkInstance.cpp  VkInstance.h  VkProgram.cpp  VkProgram.h  VkShader.cpp  VkShader.h  VkSwapchain.cpp  VkSwapchain.h
public/app/: App.h
public/appsystem/: AppSystem.h  AppSystemGroup.h  interface.h
public/engine/: Version.h
public/engine/main/: EngineApp.h
public/layer0/: Lexer.h  ParallelJobTasks.h  Platform.h  String.h  Thread.h  Token.h  layer0.h
public/layer0/Linux/: LinuxPlatform.h
public/layer1/: Command.h  Cvar.h  EventPump.h  EventSystem.h  layer1.h
public/layer2/: FileSystem.h  Window.h  layer2.h
public/layer3/: layer3.h
public/layer3/renderer/: Renderer.h
src/AppFramework/: AppComm.h  Application.h
src/Cstdlib/: Lexer.cpp  Lexer.h  Queue.h
src/EntityTypes/: Player.cpp  Player.h
src/Framework/: Main.cpp
src/Framework/Command/: Command.cpp  Command.h
src/Framework/Cvar/: Cvar.cpp  Cvar.h
src/Framework/Engine/: Engine.cpp  Engine.h
src/Framework/Entities/: Entity.cpp  Entity.h
src/Framework/Entities/Components/: Camera.cpp  Camera.h  Renderable.cpp  Renderable.h
src/Framework/Events/: Event.h  EventManager.cpp  EventManager.h
src/Framework/Filesystem/: File.h  FileSystem.cpp  FileSystem.h  InternalFile.h
src/Framework/GameWorld/: GameWorld.cpp  GameWorld.h
src/Framework/Platform/: Platform.h  Platform.inl
src/Framework/Platform/Linux/: Linux.cpp  Linux.inl
src/Framework/RenderBackend/: Geometry.cpp  Geometry.h  RenderBackend.cpp  RenderBackend.h  RenderFormat.h  RenderGraph.cpp  RenderGraph.h  RenderGraphImage.cpp  RenderGraphImage.h  RenderGraphResource.h  RenderPassManager.cpp  RenderPassManager.h
src/Framework/RenderFrontend/: RenderFrontend.cpp  RenderFrontend.h
src/Framework/VulkanBackend/: VulkanBackend.cpp  VulkanBackend.h  VulkanRenderPassManager.cpp  vma.h
src/Framework/VulkanBackend/Vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Image.cpp  Image.h  StagingBuffer.cpp  StagingBuffer.h  SwapChain.cpp  SwapChain.h  VkGodStruct.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFormat.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h
src/Framework/Window/: Window.cpp  Window.h
src/Util/: Logger.cpp  Logger.h
